--- a/CSS/Nhap.css
+++ b/CSS/Nhap.css
@@ -3,12 +3,6 @@
 	left: 600px; bottom: 150px;
 	width: 100px; height: 73px;
 	position: absolute;
-	-webkit-animation-name: Crab1;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
 
 #crab2
@@ -16,12 +10,6 @@
 	left: 400px; bottom: 80px;
 	width: 200px; height: 147px;
 	position: absolute;
-	-webkit-animation-name: Crab2;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
 
 #crab3
@@ -29,35 +17,27 @@
 	right: 450px; bottom: 80px;
 	width: 200px; height: 147px;
 	position: absolute;
-	-webkit-animation-name: Crab3;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
 
 #shrimp
 {
-	right:200px; top:500px;
-	width: 300px; height: 247px;
+	width: 100px;
+	height: 100px;
 	position: absolute;
-	-webkit-animation-name: Shrimp;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	-webkit-transform:scaleX(1)
+	bottom: 20%;
+	right: 0;
+	animation: Shrimp 30s linear infinite;
 }
-@-webkit-keyframes Shrimp
-{
-	0%   {right:200px; top:500px;}
-	1%   {right:200px; top:500px;}
-	20%  {right:800px; top:500px;}
-	40%  {right:800px; -webkit-transform:scaleX(-1);}
-	60%  {right:800px; top:200px; -webkit-transform:scaleX(-1);}
-	90%  {right:600px; top:200px; -webkit-transform:scaleX(-1);}
-	100% {right:200px; top:500px; -webkit-transform:scaleX(-1);}
+@keyframes Shrimp {
+	0% {
+		bottom: 20%;
+		right: 0;
+	}
+	100% {
+		bottom: 50%;
+		right: 100%;
+		transform: translate(-100%, -100%);
+	}
 }
 
 #waterbubbles1
@@ -65,12 +45,6 @@
 	right: 200px; bottom: 400px;
 	width: 200px; height: 147px;
 	position: absolute;
-	-webkit-animation-name: waterbubbles1;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
 
 #waterbubbles2
@@ -78,37 +52,25 @@
 	left: 100px; bottom: 400px;
 	width: 200px; height: 147px;
 	position: absolute;
-	-webkit-animation-name: waterbubbles2;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
+
 #waterbubbles3
 {
 	left: 400px; top: 200px;
 	width: 50px; height: 30px;
-	position: absolute;
-	-webkit-animation-name: waterbubbles3;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
+	position: absolute;	
 }
 
-#sua {
-    width: 120px; /* Đặt kích thước của hình */
+#jellyfish {
+    width: 120px;
     height: 120px;
     position: absolute;
     top: 300px;
     left: 50%;
     transform: translate(-50%, -50%);
-    animation: circle 10s linear infinite;
+    animation: Jellyfish 10s linear infinite;
 }
-
-@keyframes circle {
+@keyframes Jellyfish {
     0% {
         transform: translate(-50%, -50%) rotate(360deg) translateX(200px) rotate(-360deg);
     }
@@ -117,183 +79,138 @@
     }
 }
 
-#camap
+#shark
 {
-    width: 100px; /* Đặt kích thước của hình */
+    width: 100px;
     height: 100px;
     position: absolute;
-    top: 30%; /* Bắt đầu từ giữa màn hình */
-    right: 0; /* Bắt đầu từ bên trái màn hình */
-    animation: wave 5s linear infinite;
+    top: 30%; 
+    right: 0;
+    animation: Shark 5s linear infinite;
 }
-
-@keyframes wave {
+@keyframes Shark {
     0% {
         right: 0;
         transform: translateY(0);
     }
     25% {
         right: 25%;
-        transform: translateY(-100px); /* Lên trên */
+        transform: translateY(-100px);
     }
     50% {
         right: 50%;
-        transform: translateY(0); /* Quay về giữa */
+        transform: translateY(0);
     }
     75% {
         right: 75%;
-        transform: translateY(100px); /* Xuống dưới */
+        transform: translateY(100px);
     }
     100% {
         right: 100%;
-        transform: translateY(0); /* Quay về giữa */
+        transform: translateY(0);
     }
 }
 
-
-
-#sanho
+#coral1
 {
 	left: 0px; bottom: -30px;
 	width: 400px; height: 247px;
 	position: absolute;
-	-webkit-animation-name: sanho;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
 
-#sanho3
+#coral2
 {
 	right: 35px; bottom: 70px;
 	width: 400px; height: 247px;
-	position: absolute;
-	-webkit-animation-name: sanho3;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
+	position: absolute;	
 }
 
-#saobien
+#starfish
 {
 	right: 200px; bottom: -180px;
 	width: 400px; height: 247px;
-	position: absolute;
-	-webkit-animation-name: saobien;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
+	position: absolute;	
 }
 
-#so
+#scallops
 {
 	right: 300px; bottom: -180px;
 	width: 400px; height: 247px;
 	position: absolute;
-	-webkit-animation-name: so;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
 
-#ngoctrai
+#pearl
 {
 	left: 120px; bottom: -130px;
 	width: 400px; height: 247px;
-	position: absolute;
-	-webkit-animation-name: ngoctrai;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
+	position: absolute;	
 }
 
-#ruongvang
+#goldenchest
 {
 	right: 30px; bottom: 50px;
 	width: 400px; height: 247px;
 	position: absolute;
-	-webkit-animation-name: ruongvang;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
 
-#ocsen
+#seasnail
 {
 	left: 500px; bottom: -190px;
 	width: 400px; height: 247px;
 	position: absolute;
-	-webkit-animation-name: ocsen;
-	-webkit-animation-duration: 10s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-play-state: running;	
-	
 }
 
-#cavoi
+#whale
 {
-    width: 200px; /* Đặt kích thước của hình */
+    width: 200px;
     height: 200px;
     position: absolute;
-    top: -10%; /* Bắt đầu từ giữa màn hình */
-    left: 0; /* Bắt đầu từ bên trái màn hình */
-    animation: cavoi 20s linear infinite;
+    top: -10%;
+    left: 0;
+    animation: Whale 20s linear infinite;
 }
-
-@keyframes cavoi {
+@keyframes Whale {
     0% {
         left: 0;
         transform: translateY(0);
     }
     25% {
         left: 25%;
-        transform: translateY(-30px); /* Lên trên */
+        transform: translateY(-30px);
     }
     50% {
         left: 50%;
-        transform: translateY(0); /* Quay về giữa */
+        transform: translateY(0);
     }
     75% {
         left: 75%;
-        transform: translateY(30px); /* Xuống dưới */
+        transform: translateY(30px);
     }
     100% {
         left: 100%;
-        transform: translateY(0); /* Quay về giữa */
+        transform: translateY(0);
     }
 }
 
-#ca {
-	width: 100px; /* Đặt kích thước của hình */
-	height: 100px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-color: red; /* Đặt màu cho hình */
-	animation: moveDiagonal 5s linear infinite;
+#adi {
+    position: absolute;
+    bottom:-15%;
+    left: 0%;
+    font-size: 16px;
 }
 
-@keyframes moveDiagonal {
-	0% {
-		top: 0;
-		left: 0;
-	}
-	100% {
-		top: 100%;
-		left: 100%;
-		transform: translate(-100%, -100%); /* Đảm bảo hình không vượt quá khung màn hình */
-	}
+#ima {
+    transition: background-image 0.5s ease-in-out;
+    background-image: url('../Image/background1.jpg');
+    background-size: cover;
+}
+
+#background {
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 85vh;
+	background-image: url('../Image/background1.jpg');
+	background-size: cover;
+	background-position: center;
 }
